--- a/index.html
+++ b/index.html
@@ -1,7 +1,45 @@
----
-title: Home
----
+<!DOCTYPE html>
+<html lang="en">
 
-<h1>{{ "hello world" | upcase }}</h1>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Edmund Ophie</title>
+    <link rel="stylesheet" href="/assets/css/home.css">
+</head>
 
-<script src="http://localhost:35729/livereload.js"></script>
+<body>
+    <header>
+        <h1>
+            Edmund Ophie
+            <br />
+            <i>software engineer</i>
+        </h1>
+    </header>
+    <main id="middle">
+        <div>
+            <hr>
+            <div id="description" style="font-style:italic">
+                <p>&#10077;Aku bukanlah matahari, yang sanggup menyinari seluruh bumi. Tapi aku juga bukan manusia
+                    apatis yang bertakut kepada nasib.</p>
+                <p>Aku memlih untuk tidak mengutuki kegelapan dan percaya bisa menjadi lilin yang memberikan
+                    seberkas terang bagi setitik sudut ruangan.&#10078;</p>
+                <cite><small>&#8212; Mahameru, 28 Juli 2014 06:14</small></cite>
+            <!-- </figure> -->
+            </div>
+            <hr>
+        </div>
+        <div id="menu">
+            <a href="/blog.html">Blog</a>
+            <a href="/projects.html">Projects</a>
+            <a href="/about.html">About</a>
+        </div>
+    </main>
+    <section id="contact-box">
+        <div><a href="mailto:edmund@ophie.io">edmund@ophie.io</a></div>
+        <!-- <div><a href="https://id.linkedin.com/in/edmund-ophie-369618b1">LinkedIn</a></div> -->
+    </section>
+</body>
+
+</html>
