--- a/styleguide.html
+++ b/styleguide.html
@@ -1,3 +1,5 @@
+---
+---
 <!DOCTYPE html>
 <html lang="en">
 
@@ -31,13 +33,27 @@
 
         <pre><code>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</code></pre>
         <code>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</code>
-        <blockquote id="description">
+        <blockquote>
             <p>&#10077;Aku bukanlah matahari, yang sanggup menyinari seluruh bumi. Tapi aku juga bukan manusia
             apatis yang bertakut kepada nasib.
             Aku memlih untuk tidak mengutuki kegelapan dan percaya bisa menjadi lilin yang memberikan
             seberkas terang bagi setitik sudut ruangan.&#10078;</p>
             <cite>Antoine de Saint-Exupéry</cite>
         </blockquote>
+
+        <ul>
+            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</li>
+            <li>Lorem ipsum dolor sit amet</li>
+            <li>Lorem ipsum dolor sit amet</li>
+            <li>Lorem ipsum dolor sit amet</li>
+        </ul>
+
+        <ol>
+            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</li>
+            <li>Lorem ipsum dolor sit amet</li>
+            <li>Lorem ipsum dolor sit amet</li>
+            <li>Lorem ipsum dolor sit amet</li>
+        </ol>
 
         <div id="contact-box">
             <div><a href="mailto:edmund@ophie.io">edmund@ophie.io</a></div>
