--- a/styleguide.html
+++ b/styleguide.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <div class="markdown-body">
+    <div>
         <h1>Heading 1</h1>
         <h2>Heading 2</h2>
         <h3>Heading 3</h3>
@@ -52,7 +52,7 @@
             <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</li>
             <li>Lorem ipsum dolor sit amet</li>
             <li>Lorem ipsum dolor sit amet</li>
-            <li>Lorem ipsum dolor sit amet</li>
+            <li>Omegalul</li>
         </ol>
 
         <div id="contact-box">
