--- a/styleguide.html
+++ b/styleguide.html
@@ -35,10 +35,10 @@ layout: null
         <pre><code>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</code></pre>
         <code>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</code>
         <blockquote>
-            <p>&#10077;Aku bukanlah matahari, yang sanggup menyinari seluruh bumi. Tapi aku juga bukan manusia
+            &#10077;Aku bukanlah matahari, yang sanggup menyinari seluruh bumi. Tapi aku juga bukan manusia
             apatis yang bertakut kepada nasib.
             Aku memlih untuk tidak mengutuki kegelapan dan percaya bisa menjadi lilin yang memberikan
-            seberkas terang bagi setitik sudut ruangan.&#10078;</p>
+            seberkas terang bagi setitik sudut ruangan.&#10078;
             <cite>Antoine de Saint-Exupéry</cite>
         </blockquote>
 
