--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ layout: null
 
 <body>
     <header>
+        <a href="#"><span id="logo">&#x276E;&#xb7;&#x276F;</span></a>
         <h1>
             Edmund Ophie
             <br />
@@ -37,6 +38,7 @@ layout: null
             <a href="{{site.baseurl}}/projects.html">Projects</a>
             <a href="{{site.baseurl}}/about.html">About</a>
         </div>
+        <div id="leftover"></div>
     </main>
     <section id="contact-box">
         <div><a href="mailto:edmund@ophie.io">edmund@ophie.io</a></div>
