refactor nav css

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ layout: null
             <a class="menu__item link" href="{{site.baseurl}}/about.html">About</a>
         </div>
     </main>
-    <section id="contact-box" class="home__contact">
+    <section class="home__contact">
         <div><a class="contact__item link link--decorated" href="mailto:edmund@ophie.io">edmund@ophie.io</a></div>
         <!-- <div><a class="link link--decorated" href="https://id.linkedin.com/in/edmund-ophie-369618b1">LinkedIn</a></div> -->
     </section>
