--- a/about.html
+++ b/about.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: about
+title: about me
 ---
 
 <article class="blog__post">
-  <h1 class="uncolored post__title">{{page.title}}</h1>
+  <h1 class="uncolored title post__title">About me</h1>
 
   <div class="post__content">
     <div class="post__spacer"></div>
