--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ title: about me
 ---
 
 <article class="blog__post">
-  <!-- <h1 class="uncolored page__title">About me</h1> -->
+  <h1 class="uncolored page__title">About me</h1>
 
   <div class="post__content">
     <div class="post__spacer"></div>
