--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@ layout: null
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    {% include header.html %}
+
     <title>Edmund Ophie</title>
-    <link rel="stylesheet" href="{{site.baseurl}}/assets/css/styles.css">
 </head>
 
 <body class="home">
